--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -34,15 +34,17 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q4">
-          <div class="parent1">
-            <div class="child">固定</div>
-            <div class="child">可変</div>
-            <div class="child">固定</div>
-          </div>
-          <div class="parent2">
-            <div class="child">可変</div>
-            <div class="child">可変</div>
-            <div class="child">固定</div>
+          <div class="content">
+            <div class="content__table">
+              <div class="content__table__child">固定</div>
+              <div class="content__table__child">可変</div>
+              <div class="content__table__child">固定</div>
+            </div>
+            <div class="content__table">
+              <div class="content__table__child">可変</div>
+              <div class="content__table__child">可変</div>
+              <div class="content__table__child">固定</div>
+            </div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
