--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -37,17 +37,17 @@
         <!-- 回答はクラスq5の要素の中に書いてね -->
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
-        <div class="q5">
-          <div class="eight">8</div>
-          <div class="five">5</div>
-          <div class="one">1</div>
-          <div class="seven">7</div>
-          <div class="four">4</div>
-          <div class="six">6</div>
-          <div class="two">2</div>
-          <div class="three">3</div>
+        <div class="q5 content">
+          <div class="eight number">8</div>
+          <div class="five number">5</div>
+          <div class="one number">1</div>
+          <div class="seven number">7</div>
+          <div class="four number">4</div>
+          <div class="six number">6</div>
+          <div class="two number">2</div>
+          <div class="three number">3</div>
         </div>
-        <div class="nine">9</div>
+        <div class="nine number">9</div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
       </div>
     </div>
