--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -41,8 +41,8 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div class="text">
-                <p class="textp">text-align</p>
+              <div class="q5-1__text_align">
+                <p class="q5-1__text_align__text">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
@@ -54,7 +54,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p class="boxp">margin</p>
+              <p class="q5-1__margin">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -84,9 +84,9 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around q6table">
-            <div class="q6tablecell">
-              <p class="q6tabletext">table</p>
+          <div class="q6 q6--around q5-2__table">
+            <div class="q5-2__table__cell">
+              <p class="q5-2__table__cell__text">table</p>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -99,8 +99,8 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around q6flex">
-            <p class="flextext">flex</p>
+          <div class="q6 q6--around q5-2__flex">
+            <p class="q5-2__flex__text">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
           <div class="q6 q6--position">
@@ -114,8 +114,8 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-stable posi_fle_wrapper">
-              <p class="q6__box__inner posi_fle_text">position固定</p>
+            <div class="q6__box is-stable q5-2__position__stable">
+              <p class="q6__box__inner q5-2__position__stable__text">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
             <!--
@@ -128,8 +128,8 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-flexible posi_sta_wrapper">
-              <p class="q6__box__inner posi_sta_text">position可変</p>
+            <div class="q6__box is-flexible q5-2__position__flexible">
+              <p class="q6__box__inner q5-2__position__flexible__text">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
