input_init追加、class名編集

--- a/layout_parts/q8/index.html
+++ b/layout_parts/q8/index.html
@@ -109,19 +109,19 @@
                     <li class="clearfix">
                       <label>
                         <p class="item_tytle">名前<span class="require">*</span></p>
-                        <input type="text" name="name" id="name" class="text_entry item_entry" required>
+                        <input type="text" name="name" id="name" class="text_entry input_init" required>
                       </label>
                     </li>
                   <li class="form__entry__item">
                     <p class="item_tytle">性別</p>
-                    <label><input type="radio" name="sex" id="male" value="male" class="item_entry radio_entry">男性</label>
-                    <label><input type="radio" name="sex" id="female" value="female" class="item_entry radio_entry">女性</label>
+                    <label><input type="radio" name="sex" id="male" value="male" class="radio_entry input_init">男性</label>
+                    <label><input type="radio" name="sex" id="female" value="female" class="radio_entry input_init">女性</label>
                   </li>
                   <li class="form__entry__item">
                     <label>
                       <p class="item_tytle">出身</p>
                         <div class="select">
-                          <select class="item_entry select_entry" name="country" id="country">
+                          <select class="select_entry input_init" name="country" id="country">
                             <option value="tokyo">東京</option>
                             <option value="saitama">埼玉</option>
                             <option value="chiba">千葉</option>
@@ -133,24 +133,24 @@
                   <li class="form__entry__item">
                     <label>
                       <p class="item_tytle">Eメール<span class="require">*</span></p>
-                      <input type="text" name="mail" id="mail" placeholder="ex)hoge@gmail.com" class="text_entry item_entry" required>
+                      <input type="text" name="mail" id="mail" placeholder="ex)hoge@gmail.com" class="text_entry input_init" required>
                     </label>
                   </li>
                   <li class="form__entry__item">
                     <label>
                       <p class="item_tytle">電話番号</p>
-                      <input type="text" name="tel" id="tel" placeholder="ex)08012345678" class="text_entry item_entry">
+                      <input type="text" name="tel" id="tel" placeholder="ex)08012345678" class="text_entry input_init">
                     </label>
                   </li>
                   <div class="age">
-                    <label><input type="checkbox" name="age" id="age" class="agecheck" value="checked">20歳以上です</label>
+                    <label><input type="checkbox" name="age" id="age" class="agecheck input_init" value="checked">20歳以上です</label>
                   </div>
                   <div class="subbutton">
-                    <input type="submit" value="送信" class="button">
+                    <input type="submit" value="送信" class="button input_init">
                   </div>
                 </div>
                 <div class="memoform clearfix">
-                  <label><textarea name="memo" id="memo" placeholder="なにかあれば入力してください" class="memo text_entry item_entry"></textarea></label>
+                  <label><textarea name="memo" id="memo" placeholder="なにかあれば入力してください" class="memo text_entry input_init"></textarea></label>
                 </div>
               </div>
             </form>
