--- a/layout_parts/q8/index.html
+++ b/layout_parts/q8/index.html
@@ -142,14 +142,14 @@
                       <input type="text" name="tel" id="tel" placeholder="ex)08012345678" class="text_entry input_init">
                     </label>
                   </li>
-                  <div class="age">
+                  <div class="form__age">
                     <label><input type="checkbox" name="age" id="age" class="agecheck input_init" value="checked">20歳以上です</label>
                   </div>
-                  <div class="subbutton">
+                  <div class="form__sub">
                     <input type="submit" value="送信" class="button input_init">
                   </div>
                 </div>
-                <div class="memoform clearfix">
+                <div class="form__memo clearfix">
                   <label><textarea name="memo" id="memo" placeholder="なにかあれば入力してください" class="memo text_entry input_init"></textarea></label>
                 </div>
               </div>
