--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -36,14 +36,14 @@
         <div class="q4">
           <div class="content">
             <div class="content__table">
-              <div class="content__table__child">固定</div>
-              <div class="content__table__child">可変</div>
-              <div class="content__table__child">固定</div>
+              <div class="content__table__child orange">固定</div>
+              <div class="content__table__child purple">可変</div>
+              <div class="content__table__child blue">固定</div>
             </div>
             <div class="content__table">
-              <div class="content__table__child">可変</div>
-              <div class="content__table__child">可変</div>
-              <div class="content__table__child">固定</div>
+              <div class="content__table__child yellow">可変</div>
+              <div class="content__table__child red">可変</div>
+              <div class="content__table__child green">固定</div>
             </div>
           </div>
         </div>
