inputタグのをdisplay:none、spanタグを追加・button押下時のアクション追加

--- a/layout_parts/q8/index.html
+++ b/layout_parts/q8/index.html
@@ -114,8 +114,8 @@
                     </li>
                   <li class="form__entry__item">
                     <p class="item_tytle">性別</p>
-                    <label><input type="radio" name="sex" id="male" value="male" class="radio_entry input_init">男性</label>
-                    <label><input type="radio" name="sex" id="female" value="female" class="radio_entry input_init">女性</label>
+                    <label><input type="radio" name="sex" id="male" value="male" class="radio_entry"><span class="radio_box"></span>男性</label>
+                    <label><input type="radio" name="sex" id="female" value="female" class="radio_entry"><span class="radio_box"></span>女性</label>
                   </li>
                   <li class="form__entry__item">
                     <label>
@@ -143,7 +143,7 @@
                     </label>
                   </li>
                   <div class="form__age">
-                    <label><input type="checkbox" name="age" id="age" class="agecheck input_init" value="checked">20歳以上です</label>
+                    <label><input type="checkbox" name="age" id="age" class="age_check" value="checked"><span class="age_box"></span>20歳以上です</label>
                   </div>
                   <div class="form__sub">
                     <input type="submit" value="送信" class="button input_init">
